// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Close renders default close styling 1`] = `
<div
  aria-label="Press delete to remove"
  className="Close-hpSOeC c-tag__remove eUlaem"
  data-garden-id="tags.close"
  data-garden-version="version"
/>
`;

exports[`Close renders hovered styling correctly 1`] = `
<div
  aria-label="Press delete to remove"
  className="Close-hpSOeC c-tag__remove is-hovered eUlaem"
  data-garden-id="tags.close"
  data-garden-version="version"
/>
`;
